# yolo_annotator

./: .bazelrc  BUILD.bazel  CMakeLists.txt  WORKSPACE.bazel  yolo_annotator.qrc
src/: annotation_manager.cpp  annotation_manager.h  annotationboundingbox.cpp  annotationboundingbox.h  cache_db_interface.cpp  cache_db_interface.h  image_list_model.cpp  image_list_model.h  image_sort_filter_proxy_model.cpp  image_sort_filter_proxy_model.h  image_view.cpp  image_view.h  label_colors.cpp  label_colors.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sqlite_orm.h
